--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <table class="table mb-4 col-8"  id="tb-item">
                                 <thead>
                                     <tr>
-                                        
+                                        <th scope="col">completed</th>
                                         <th scope="col">Todo item</th>
                                         <th scope="col">Status</th>
                                         <th scope="col">Actions</th>
